{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "b72ad879-64d5-d1dd-c005-27cb03ae0979",
  "resources": [
    {
      "module": "module.rds_app",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:security-group/sg-5998e977",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-5998e977",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds_subnet_id_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:subnet/subnet-4ac4332c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-4ac4332c",
            "map_public_ip_on_launch": true,
            "owner_id": "399728276788",
            "state": "available",
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds_subnet_id_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:subnet/subnet-88a05da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-88a05da9",
            "map_public_ip_on_launch": true,
            "owner_id": "399728276788",
            "state": "available",
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:vpc/vpc-6b282b11",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-d3031fbf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-15b9156f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-6b282b11",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-035ad47d",
            "owner_id": "399728276788",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_elb",
      "name": "app_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:399728276788:loadbalancer/bookstack-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "bookstack-elb-240183116.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "bookstack-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "tcp",
                "lb_port": 8080,
                "lb_protocol": "tcp"
              }
            ],
            "name": "bookstack-elb",
            "security_groups": [
              "sg-087946a5d880830a4",
              "sg-5998e977"
            ],
            "source_security_group": "399728276788/development-rds-app-sg",
            "source_security_group_id": "sg-087946a5d880830a4",
            "subnets": [
              "subnet-4ac4332c",
              "subnet-88a05da9"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.app_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:security-group/sg-087946a5d880830a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087946a5d880830a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "development-rds-app-sg",
            "name_prefix": null,
            "owner_id": "399728276788",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-6b282b11"
          },
          "dependencies": [
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:security-group/sg-0bd65932f626fab3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd65932f626fab3a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087946a5d880830a4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "development-rds-sg",
            "name_prefix": null,
            "owner_id": "399728276788",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-6b282b11"
          },
          "dependencies": [
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-to-loadBalancer-8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3557020498",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087946a5d880830a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.app_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-from-app-to-rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3137178716",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd65932f626fab3a",
            "self": false,
            "source_security_group_id": "sg-087946a5d880830a4",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.app_sg",
            "module.rds_app.aws_security_group.rds_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-870651850",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087946a5d880830a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.app_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all_rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1272560548",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd65932f626fab3a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.rds_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_all_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-747650540",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-087946a5d880830a4",
            "self": true,
            "source_security_group_id": "sg-087946a5d880830a4",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.app_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    },
    {
      "module": "module.rds_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_all_rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2720334529",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bd65932f626fab3a",
            "self": true,
            "source_security_group_id": "sg-0bd65932f626fab3a",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_app.aws_security_group.rds_sg",
            "module.rds_app.module.shared_vars.random_password.rds_random_pass"
          ]
        }
      ]
    }
  ]
}